adding configuration volumes to vscode to allow the code server to edit dashy and hass configuration

--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -15,7 +15,8 @@
 - name: " {{ data_root }}/data-backup/media  sure the jellyfin container is created and running"
   become: yes
   docker_container:
-    image: "ghcr.io/linuxserver/jellyfin"
+    # image: "jellyfin/jellyfin:latest"
+    image: "ghcr.io/linuxserver/jellyfin:latest"
     name: "jellyfin"
     # network_mode: "host"
     ports:
