--- a/roles/services/vscode/tasks/main.yml
+++ b/roles/services/vscode/tasks/main.yml
@@ -17,6 +17,7 @@
       # - PROXY_DOMAIN=code-server.my.domain #optional
       # - DEFAULT_WORKSPACE=/config/workspace #optional
     volumes:
-      # - "{{ data_root }}/vw_data:/data"
+      - "{{ config_root }}/dashy_config:/dashy_config"
+      - "{{ data_root }}/homeassistant/config:/hass_config"
       - "{{ config_root }}/vscode_config:/config"
     restart_policy: unless-stopped
