--- a/roles/home-automation/homeassistant/tasks/main.yml
+++ b/roles/home-automation/homeassistant/tasks/main.yml
@@ -61,8 +61,8 @@
        traefik.http.routers.hass.rule: Host("hass.docker.localhost")
        traefik.http.services.hass.loadbalancer.server.port: "8123"
     devices:
-      - "/dev/zigbee:/dev/zigbee"
-      - "/dev/zwave:/dev/zwave"
+      - "/dev/ttyUSB1:/dev/zigbee"
+      - "/dev/ttyUSB0:/dev/zwave"
     pull: yes
     state: 'started'
     env:
