--- a/roles/services/traefik/files/traefik.yml
+++ b/roles/services/traefik/files/traefik.yml
@@ -1,23 +1,7 @@
-global:
-  sendAnonymousUsage: false
-
 api:
   dashboard: true
-  insecure: true
+  # insecure: true
   debug: true
-
-providers:
-  docker:
-    endpoint: "unix:///var/run/docker.sock"
-    watch: true
-    exposedByDefault: false
-  file:
-    filename: /config.yml
-    watch: true
-
-log:
-  level: INFO
-  format: common
 entryPoints:
   http:
     address: ":80"
@@ -30,7 +14,16 @@ entryPoints:
     address: ":443"
 serversTransport:
   insecureSkipVerify: true
-
+providers:
+  docker:
+    endpoint: "unix:///var/run/docker.sock"
+    watch: true
+    exposedByDefault: false
+  file:
+    filename: /config.yml
+log:
+  level: INFO
+  format: common
 certificatesResolvers:
   cloudflare:
     acme:
