--- a/roles/services/traefik/tasks/main.yml
+++ b/roles/services/traefik/tasks/main.yml
@@ -24,45 +24,40 @@
     security_opts:
       - "no-new-privileges:true"
     labels:
-      # traefik.enable: "true"
-      # traefik.http.routers.traefik: "true"
+      traefik.enable: "true"
+      traefik.http.routers.traefik.entrypoints: "http"
+      traefik.http.routers.traefik.rule: "Host(`traefik.coulter.rocks`)"
 
-      # Dynamic Configuration
-      traefik.http.routers.dashboard.rule: "Host(`traefik.coulter.rocks`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
-      traefik.http.routers.dashboard.service: "api@internal"
-      # traefik.http.routers.dashboard.middlewares: "auth"
-      # traefik.http.middlewares.auth.basicauth.users: "{{ traefik_password }}"
+      traefik.http.middlewares.traefik-ipwhitelist.ipwhitelist.sourcerange: "192.168.1.1/24"
 
-      # traefik.http.routers.traefik.entrypoints: "http"
-      # traefik.http.routers.traefik.rule: "Host(`traefik.coulter.rocks`)"
       # traefik.http.middlewares.traefik-auth.basicauth.users: "{{ traefik_password }}"
-      # traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme: "https"
-      # traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto: "https"
-      # traefik.http.routers.traefik.middlewares: "traefik-https-redirect"
+      traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme: "https"
+      traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto: "https"
+      traefik.http.routers.traefik.middlewares: "traefik-https-redirect"
       traefik.http.routers.traefik-secure.entrypoints: "https"
       traefik.http.routers.traefik-secure.rule: "Host(`traefik.coulter.rocks`)"
-      # traefik.http.routers.traefik-secure.middlewares: "traefik-auth"
-      # traefik.http.routers.traefik-secure.tls: "true"
-      # traefik.http.routers.traefik-secure.tls.certresolver: "cloudflare"
-      # traefik.http.routers.traefik-secure.tls.domains[0].main: "coulter.rocks"
-      # traefik.http.routers.traefik-secure.tls.domains[0].sans: "*.coulter.rocks"
-      # # traefik.http.services.traefik.loadbalancer.server.port: "8083"
-      # traefik.http.routers.traefik-secure.service: "api@internal"
+      traefik.http.routers.traefik-secure.middlewares: "traefik-ipwhitelist"
+      traefik.http.routers.traefik-secure.tls: "true"
+      traefik.http.routers.traefik-secure.tls.certresolver: "cloudflare"
+      traefik.http.routers.traefik-secure.tls.domains[0].main: "coulter.rocks"
+      traefik.http.routers.traefik-secure.tls.domains[0].sans: "*.coulter.rocks"
+      traefik.http.routers.traefik-secure.service: "api@internal"
+      # traefik.http.services.traefik.loadbalancer.server.port: "8083"
     networks:
       - name: proxy
     ports:
       # HTTPS / SSL port
       - "443:443"
       # The Traefik Web UI port (enabled by api:insecure: true in traefik.yml)
-      - "8083:8080"
-      # - "8083:80"
+      # - "8084:8080"
+      - "8083:80"
     pull: yes
     state: 'started'
     env:
       CLOUDFLARE_EMAIL: "{{ cloudflare_email }}"
       CLOUDFLARE_API_KEY: "{{ cloudflare_token }}"
-      # CF_API_EMAIL:
-      # CF_API_KEY:
+      CF_API_EMAIL: "{{ cloudflare_email }}"
+      CF_API_L: "{{ cloudflare_token }}"
 
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
