--- a/roles/services/nextcloud/tasks/main.yml
+++ b/roles/services/nextcloud/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: Create a nextcloud network
-  docker_network:
-    name: nextcloud_network
+# - name: Create a nextcloud network
+#   docker_network:
+#     name: nextcloud_network
 
 # - name: Create a nextcloud_html if it does not exist
 #   ansible.builtin.file:
@@ -26,6 +26,19 @@
     restart_policy: unless-stopped
     published_ports:
       - "8080:80"
+    networks:
+      - name: proxy
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.nextcloud.entrypoints: "http"
+      traefik.http.routers.nextcloud.rule: "Host(`next.coulter.rocks`)"
+      traefik.http.middlewares.nextcloud-https-redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.nextcloud.middlewares: "nextcloud-https-redirect"
+      traefik.http.routers.nextcloud-secure.entrypoints: "https"
+      traefik.http.routers.nextcloud-secure.rule: "Host(`next.coulter.rocks`)"
+      traefik.http.routers.nextcloud-secure.tls: "true"
+      traefik.http.routers.nextcloud-secure.service: "nextcloud"
+      traefik.http.services.nextcloud.loadbalancer.server.url: "http://vault.local:8080"
     pull: yes
     state: 'started'
     env:
@@ -35,7 +48,7 @@
       "MYSQL_PASSWORD": "{{ mariadb_password }}"
       "REDIS_HOST": nextcloud-redis
     networks: 
-      - name: nextcloud_network
+      - name: proxy
     volumes:
       - "{{ nc_html_path }}:/var/www/html"
       - "{{ data_root }}/sync:/sync"
@@ -46,7 +59,7 @@
     networks_cli_compatible: yes
     name: "nextcloud-redis"
     networks:
-      - name: nextcloud_network
+      - name: proxy
     image: "redis:alpine"
     pull: yes
     state: 'started'
@@ -77,7 +90,7 @@
     image: mysql:latest
     pull: yes
     networks:
-      - name: nextcloud_network
+      - name: proxy
     state: 'started'
     volumes:
       # - /docker/mariadb/my.cnf:/etc/mysql/my.cnf:ro
