--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -18,9 +18,8 @@
     # image: "jellyfin/jellyfin:latest"
     image: "ghcr.io/linuxserver/jellyfin:latest"
     name: "jellyfin"
-    # network_mode: "host"
     ports:
-      - 80:8096
+      - 8096:8096
     networks:
       - name: proxy
     labels:
@@ -33,7 +32,7 @@
       traefik.http.routers.jellyfin-secure.rule: "Host(`flicks.coulter.rocks`)"
       traefik.http.routers.jellyfin-secure.tls: "true"
       traefik.http.routers.jellyfin-secure.service: "jellyfin"
-      traefik.http.services.jellyfin.loadbalancer.server.url: "http://vault.local"
+      traefik.http.services.jellyfin.loadbalancer.server.url: "http://vault.local:8096"
     # networks:
     #   - name: swag_internal_macvlan
     #     ipv4_address: "{{ ip_address }}"
