--- a/roles/services/mealie/tasks/main.yml
+++ b/roles/services/mealie/tasks/main.yml
@@ -10,11 +10,14 @@
     labels:
       traefik.enable: "true"
       traefik.http.routers.mealie.entrypoints: "http"
-      traefik.http.routers.mealie.rule: "Host(`mealie.coulter.rocks`)"
+      # This syntax allows cloudflare tunnel to host mealie.coulter.rocks which points to local mealie-in.coulter.rocks over https
+      # Both mealie.coulter.rocks and mealie-in.coulter.rocks must be configured in local dns (pi-hole)
+      # https://www.youtube.com/watch?v=yMmxw-DZ5Ec
+      traefik.http.routers.mealie.rule: "Host(`mealie.coulter.rocks`)||Host(`mealie-in.coulter.rocks`)"
       traefik.http.middlewares.mealie-https-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.mealie.middlewares: "mealie-https-redirect"
       traefik.http.routers.mealie-secure.entrypoints: "https"
-      traefik.http.routers.mealie-secure.rule: "Host(`mealie.coulter.rocks`)"
+      traefik.http.routers.mealie-secure.rule: "Host(`mealie.coulter.rocks`)||Host(`mealie-in.coulter.rocks`)"
       traefik.http.routers.mealie-secure.tls: "true"
       traefik.http.routers.mealie-secure.service: "mealie"
       traefik.http.services.mealie.loadbalancer.server.url: "http://vault.local:9092"
