--- a/roles/services/vaultwarden/tasks/main.yml
+++ b/roles/services/vaultwarden/tasks/main.yml
@@ -17,15 +17,13 @@
     labels:
       traefik.enable: "true"
       traefik.http.routers.vaultwarden.entrypoints: "http"
-      traefik.http.routers.vaultwarden.rule: "Host(`vaultwarden.coulter.rocks`)"
+      traefik.http.routers.vaultwarden.rule: "Host(`vaultwarden.coulter.rocks`)||Host(`vaultwarden-in.coulter.rocks`)"
       traefik.http.middlewares.vaultwarden-https-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.vaultwarden.middlewares: "vaultwarden-https-redirect"
       traefik.http.routers.vaultwarden-secure.entrypoints: "https"
-      traefik.http.routers.vaultwarden-secure.rule: "Host(`vaultwarden.coulter.rocks`)"
+      traefik.http.routers.vaultwarden-secure.rule: "Host(`vaultwarden.coulter.rocks`)||Host(`vaultwarden-in.coulter.rocks`)"
       traefik.http.routers.vaultwarden-secure.tls: "true"
       traefik.http.routers.vaultwarden-secure.service: "vaultwarden"
       traefik.http.services.vaultwarden.loadbalancer.server.url: "http://vault.local:8087"
-
-      # traefik.docker.network: "proxy"
     networks:
       - name: proxy
