--- a/roles/services/open-speed-test/tasks/main.yml
+++ b/roles/services/open-speed-test/tasks/main.yml
@@ -2,10 +2,22 @@
 - name: Make sure the OpenSpeedTest container is created and running
   docker_container:
     image: openspeedtest/latest
-    name: speed-test
+    name: speedtest
+    networks:
+      - name: proxy
     ports:
       - "3002:3000"
-      - "3001:3001"
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.speedtest.entrypoints: "http"
+      traefik.http.routers.speedtest.rule: "Host(`speedtest.coulter.rocks`)||Host(`speedtest-in.coulter.rocks`)"
+      traefik.http.middlewares.speedtest-https-redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.speedtest.middlewares: "speedtest-https-redirect"
+      traefik.http.routers.speedtest-secure.entrypoints: "https"
+      traefik.http.routers.speedtest-secure.rule: "Host(`speedtest.coulter.rocks`)||Host(`speedtest-in.coulter.rocks`)"
+      traefik.http.routers.speedtest-secure.tls: "true"
+      traefik.http.routers.speedtest-secure.service: "speedtest"
+      traefik.http.services.speedtest.loadbalancer.server.url: "http://vault.local:3002"
     pull: yes
     state: 'started'
     env:
