--- a/run.yml
+++ b/run.yml
@@ -260,6 +260,11 @@
         - containers
         - duplicati
 
+    - role: services/duplicacy 
+      tags:
+        - containers
+        - duplicacy
+
     - role: services/traefik  
       tags:
         - containers
