--- a/roles/services/traefik/files/config.yml
+++ b/roles/services/traefik/files/config.yml
@@ -48,4 +48,5 @@ http:
         - default-whitelist
         - default-headers
 
-        
+CLI: --serversTransport.insecureSkipVerify=true
+# (https://doc.traefik.io/traefik/routing/overview/#insecureskipverify)
