--- a/roles/media/airsonic/tasks/main.yml
+++ b/roles/media/airsonic/tasks/main.yml
@@ -9,10 +9,10 @@
       - name: proxy
     labels:
       traefik.enable: "true"
-      traefik.http.routers.airsonic.entrypoints: "http"
-      traefik.http.routers.airsonic.rule: "Host(`airsonic.coulter.rocks`)||Host(`airsonic-in.coulter.rocks`)"
-      traefik.http.middlewares.airsonic-https-redirect.redirectscheme.scheme: "https"
-      traefik.http.routers.airsonic.middlewares: "airsonic-https-redirect"
+      # traefik.http.routers.airsonic.entrypoints: "http"
+      # traefik.http.routers.airsonic.rule: "Host(`airsonic.coulter.rocks`)||Host(`airsonic-in.coulter.rocks`)"
+      # traefik.http.middlewares.airsonic-https-redirect.redirectscheme.scheme: "https"
+      # traefik.http.routers.airsonic.middlewares: "airsonic-https-redirect"
       traefik.http.routers.airsonic-secure.entrypoints: "https"
       traefik.http.routers.airsonic-secure.rule: "Host(`airsonic.coulter.rocks`)||Host(`airsonic-in.coulter.rocks`)"
       traefik.http.routers.airsonic-secure.tls: "true"
