--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -24,15 +24,73 @@
       - name: proxy
     labels:
       traefik.enable: "true"
-      traefik.http.routers.jellyfin.entrypoints: "http"
-      traefik.http.routers.jellyfin.rule: "Host(`flicks.coulter.rocks`)||Host(`flicks-in.coulter.rocks`)"
+      traefik.http.routers.jellyfin.entrypoints: "http-external"
+      # traefik.http.routers.jellyfin.rule: "Host(`flicks.coulter.rocks`)||Host(`flicks-in.coulter.rocks`)||Host(`jelly.coulter.rocks`)"
+      traefik.http.routers.jellyfin.rule: "Host(`flicks.coulter.rocks`)||Host(`jelly.coulter.rocks`)"
       traefik.http.middlewares.jellyfin-https-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.jellyfin.middlewares: "jellyfin-https-redirect"
-      traefik.http.routers.jellyfin-secure.entrypoints: "https"
-      traefik.http.routers.jellyfin-secure.rule: "Host(`flicks.coulter.rocks`)||Host(`flicks-in.coulter.rocks`)"
+      traefik.http.routers.jellyfin-secure.entrypoints: "https-external"
+      # traefik.http.routers.jellyfin-secure.rule: "Host(`flicks.coulter.rocks`)||Host(`flicks-in.coulter.rocks`)||Host(`jelly.coulter.rocks`)"
+      traefik.http.routers.jellyfin-secure.rule: "Host(`flicks.coulter.rocks`)||Host(`jelly.coulter.rocks`)"
       traefik.http.routers.jellyfin-secure.tls: "true"
       traefik.http.routers.jellyfin-secure.service: "jellyfin"
-      traefik.http.services.jellyfin.loadbalancer.server.url: "http://vault.local:8096"
+      # traefik.http.services.jellyfin.loadbalancer.server.url: "http://192.168.1.36:8096"
+
+      # ## HTTP Router
+      # #### Entry point where Jellyfin is accessible via
+      # #### Change secure to https in the line below to have accessible without needing to specify a port and change the SSLHost option below
+      # traefik.http.routers.jellyfin.entryPoints: "https"
+      # #### Host or Path where Jellyfin is accessible
+      # #### Remove (or change) this rule if you'd rather have Jellyfin accessible at a PathPrefix URI
+      # traefik.http.routers.jellyfin.rule: "Host(`jelly.coulter.rocks`)" # OPTIONAL: && PathPrefix(`/jellyfin`)
+      # #### Enable TLS with the ACME/LetsEncrypt resolver for HOSTNAME.DOMAIN_NAME
+      # traefik.http.routers.jellyfin.tls: "true"
+      # # traefik.http.routers.jellyfin.tls.certResolver: leresolver
+      # traefik.http.routers.jellyfin.tls.certResolver: "cloudflare"
+      # traefik.http.routers.jellyfin.tls.domain: "jelly.coulter.rocks"
+      # ## Middleware
+      # traefik.http.routers.jellyfin.middlewares: "jellyfin-mw"
+      # #### The customResponseHeaders option lists the Header names and values to apply to the response.
+      # traefik.http.middlewares.jellyfin-mw.headers.customResponseHeaders.X-Robots-Tag: "noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex"
+      # #### The sslRedirect is set to true, then only allow https requests.
+      # traefik.http.middlewares.jellyfin-mw.headers.SSLRedirect: "true"
+      # #### The sslHost option is the host name that is used to redirect http requests to https.
+      # #### This is the exact URL that will be redirected to, so you can remove the :9999 port if using default SSL port
+      # traefik.http.middlewares.jellyfin-mw.headers.SSLHost: "jelly.coulter.rocks"
+      # #### Set sslForceHost to true and set SSLHost to forced requests to use SSLHost even the ones that are already using SSL.
+      # #### Note that this uses SSLHost verbatim, so add the port to SSLHost if you are using an alternate port.
+      # traefik.http.middlewares.jellyfin-mw.headers.SSLForceHost: "true"
+      # #### The stsSeconds is the max-age of the Strict-Transport-Security header. If set to 0, would NOT include the header.
+      # traefik.http.middlewares.jellyfin-mw.headers.STSSeconds: "315360000"
+      # #### The stsIncludeSubdomains is set to true, the includeSubDomains directive will be
+      # #### appended to the Strict-Transport-Security header.
+      # traefik.http.middlewares.jellyfin-mw.headers.STSIncludeSubdomains: "true"
+      # #### Set stsPreload to true to have the preload flag appended to the Strict-Transport-Security header.
+      # traefik.http.middlewares.jellyfin-mw.headers.STSPreload: "true"
+      # #### Set forceSTSHeader to true, to add the STS header even when the connection is HTTP.
+      # traefik.http.middlewares.jellyfin-mw.headers.forceSTSHeader: "true"
+      # #### Set frameDeny to true to add the X-Frame-Options header with the value of DENY.
+      # traefik.http.middlewares.jellyfin-mw.headers.frameDeny: "true"
+      # #### Set contentTypeNosniff to true to add the X-Content-Type-Options header with the value nosniff.
+      # traefik.http.middlewares.jellyfin-mw.headers.contentTypeNosniff: "true"
+      # #### Set browserXssFilter to true to add the X-XSS-Protection header with the value 1; mode=block.
+      # traefik.http.middlewares.jellyfin-mw.headers.customresponseheaders.X-XSS-PROTECTION: "0"
+      # #### The customFrameOptionsValue allows the X-Frame-Options header value to be set with a custom value. This
+      # #### overrides the FrameDeny option.
+      # traefik.http.middlewares.jellyfin-mw.headers.customFrameOptionsValue: 'allow-from https://coulter.rocks'
+      # ## HTTP Service
+      # # We define the port here as a port is required, but note that the service is pointing to the service defined in @file
+      # traefik.http.routers.jellyfin.service: "jellyfin-svc@file"
+      # traefik.http.services.jellyfin-svc.loadBalancer.server.port: "8096"
+      # traefik.http.services.jellyfin-svc.loadBalancer.passHostHeader: "true"
+      # ## Redirection of HTTP on port 9999 to HTTPS on port 9999 (consistent protocol)
+      # traefik.http.routers.jellyfin-insecure.entryPoints: "secure"
+      # traefik.http.routers.jellyfin-insecure.rule: "Host(`jelly.coulter.rocks`)" # OPTIONAL: && PathPrefix(`/jellyfin`)
+      # traefik.http.routers.jellyfin-insecure.middlewares: "jellyfin-insecure-mw"
+      # traefik.http.middlewares.jellyfin-insecure-mw.redirectscheme.scheme: "https"
+      # # traefik.http.middlewares.jellyfin-insecure-mw.redirectscheme.port: 9999: # remove if you are using a default port
+      # traefik.http.middlewares.jellyfin-insecure-mw.redirectscheme.permanent: "false"
+      # traefik.http.routers.jellyfin-insecure.service: "noop@internal"
     # networks:
     #   - name: swag_internal_macvlan
     #     ipv4_address: "{{ ip_address }}"
