--- a/roles/services/traefik/files/traefik.yml
+++ b/roles/services/traefik/files/traefik.yml
@@ -1,3 +1,6 @@
+---
+global:
+  sendAnonymousUsage: true
 api:
   dashboard: true
   # insecure: true
@@ -6,12 +9,31 @@ entryPoints:
   http:
     address: ":80"
     http:
+      # middlewares:
+      #   - crowdsec-bouncer@file
       redirections:
         entryPoint:
           to: https
           scheme: https
   https:
     address: ":443"
+    http:
+      # middlewares:
+      #   - crowdsec-bouncer@file
+  http-external:
+    address: ":82"
+    http:
+      # middlewares:
+      #   - crowdsec-bouncer@file
+      redirections:
+        entryPoint:
+          to: https-external
+          scheme: https
+  https-external:
+    address: ":444"
+    http:
+      # middlewares:
+      #   - crowdsec-bouncer@file
 serversTransport:
   insecureSkipVerify: true
 providers:
@@ -21,6 +43,7 @@ providers:
     exposedByDefault: false
   file:
     filename: /config.yml
+    watch: true
 log:
   level: INFO
   format: common
